ZETLAB/ZetHeaders/Zadc.h

// определить установленный размер буфера при прерывании
long WINAPI ZGetInterruptADC(long typeDevice, long numberDSP, long *size);
long WINAPI ZGetInterruptDAC(long typeDevice, long numberDSP, long *size);
// определить макс. возможный размер буфера при прерывании
long WINAPI ZGetMaxInterruptADC(long typeDevice, long numberDSP, long *size);
long WINAPI ZGetMaxInterruptDAC(long typeDevice, long numberDSP, long *size);
// установить размер буфера для перекачки при прерывании
long WINAPI ZSetInterruptADC(long typeDevice, long numberDSP, long size);
long WINAPI ZSetInterruptDAC(long typeDevice, long numberDSP, long size);
// определить установленный размер пакета данных DSP
long WINAPI ZGetSizePacketADC(long typeDevice, long numberDSP, long *size);
long WINAPI ZGetSizePacketDAC(long typeDevice, long numberDSP, long *size);
// определить макс. возможный размер пакета данных DSP
long WINAPI ZGetMaxSizePacketADC(long typeDevice, long numberDSP, long *size);
long WINAPI ZGetMaxSizePacketDAC(long typeDevice, long numberDSP, long *size);
// установить размер пакета данных DSP
long WINAPI ZSetSizePacketADC(long typeDevice, long numberDSP, long size);
long WINAPI ZSetSizePacketDAC(long typeDevice, long numberDSP, long size);
// определить установленное кол-во пакетов за одно прерывание
long WINAPI ZGetQuantityPacketsADC(long typeDevice, long numberDSP, long *size);
long WINAPI ZGetQuantityPacketsDAC(long typeDevice, long numberDSP, long *size);
// определить макс. возможное кол-во пакетов за одно прерывание
long WINAPI ZGetMaxQuantityPacketsADC(long typeDevice, long numberDSP, long *size);
long WINAPI ZGetMaxQuantityPacketsDAC(long typeDevice, long numberDSP, long *size);
// установить кол-во пакетов за одно прерывание
long WINAPI ZSetQuantityPacketsADC(long typeDevice, long numberDSP, long size);
long WINAPI ZSetQuantityPacketsDAC(long typeDevice, long numberDSP, long size);
// установить однократное или циклическое накопление в буфер ОЗУ ПК 
long WINAPI ZSetCycleSampleADC(long typeDevice, long numberDSP, long enable);
long WINAPI ZSetCycleSampleDAC(long typeDevice, long numberDSP, long enable);
// задать размер буфера АЦП в ОЗУ ПК
long WINAPI ZSetBufferSizeADC(long typeDevice, long numberDSP, long size);
long WINAPI ZSetBufferSizeDAC(long typeDevice, long numberDSP, long size);
// запросить буфер в ОЗУ ПК
long WINAPI ZGetBufferADC(long typeDevice, long numberDSP, void **buffer, long *size);
long WINAPI ZGetBufferDAC(long typeDevice, long numberDSP, void **buffer, long *size);
// освободить буфер в ОЗУ ПК
long WINAPI ZRemBufferADC(long typeDevice, long numberDSP, void **buffer);
long WINAPI ZRemBufferDAC(long typeDevice, long numberDSP, void **buffer);
// чтение указателя буфера в ОЗУ ПК
long WINAPI ZGetPointerADC(long typeDevice, long numberDSP, long *pointer);
long WINAPI ZGetPointerDAC(long typeDevice, long numberDSP, long *pointer);
// опрос количества включенных каналов
long WINAPI ZGetNumberInputADC(long typeDevice, long numberDSP, long *workChannels);
long WINAPI ZGetNumberOutputDAC(long typeDevice, long numberDSP, long *workChannels);
// опрос включен ли заданный канал
long WINAPI ZGetInputADC(long typeDevice, long numberDSP, long numberChannel, long *enable);
long WINAPI ZGetOutputDAC(long typeDevice, long numberDSP, long numberChannel, long *enable);
// включить/выключить заданный канал
long WINAPI ZSetInputADC(long typeDevice, long numberDSP, long numberChannel, long enable);
long WINAPI ZSetOutputDAC(long typeDevice, long numberDSP, long numberChannel, long enable);
// ------------- Функции для работы только с АЦП -------------
// получить оставшиеся данные АЦП (больше не поддерживается!)
long WINAPI ZGetLastDataADC(long typeDevice, long numberDSP, long numberChannel, void *buffer, long size);
// прочитать режим работы устройства
long WINAPI ZGetModaADC(long typeDevice, long numberDSP, long *moda);
// установить режим работы устройства (служебн., пользоваться не рекомендуется)
long WINAPI ZSetModaADC(long typeDevice, long numberDSP, long moda);
// прочитать коэф. усиления
long WINAPI ZGetAmplifyADC(long typeDevice, long numberDSP, long numberChannel, double *amplify);
// прочитать коэф. усиления из списка возможных коэф. усиления
long WINAPI ZGetListAmplifyADC(long typeDevice, long numberDSP, long next, double *amplify);
// установить следующий коэф. усиления
long WINAPI ZSetNextAmplifyADC(long typeDevice, long numberDSP, long numberChannel, long next, double *amplify);
// установить коэф. усиления
long WINAPI ZSetAmplifyADC(long typeDevice, long numberDSP, long numberChannel, double amplifyIn, double *amplifyOut);
// прочитать коэф. усиления ПУ8/10
long WINAPI ZGetPreAmplifyADC(long typeDevice, long numberDSP, long numberChannel, double *amplify);
// прочитать коэф. усиления из списка возможных коэф. усиления ПУ8/10
long WINAPI ZGetListPreAmplifyADC(long typeDevice, long numberDSP, long next, double *amplify);
// установить следующий коэф. усиления ПУ8/10
long WINAPI ZSetNextPreAmplifyADC(long typeDevice, long numberDSP, long numberChannel, long next, double *amplify);
// установить коэф. усиления ПУ8/10
long WINAPI ZSetPreAmplifyADC(long typeDevice, long numberDSP, long numberChannel, double amplifyIn, double *amplifyOut);
// проверить поддерживается и подключен ли модуль HCP
long WINAPI ZFindHCPADC(long typeDevice, long numberDSP, long *present);
// прочитать о состоянии заданного канала модуля HCP
long WINAPI ZGetHCPADC(long typeDevice, long numberDSP, long numberChannel, long *enable);
// установить состояние заданного канала модуля HCP
long WINAPI ZSetHCPADC(long typeDevice, long numberDSP, long numberChannel, long enable);
// опрос дифференциального режима заданного канала для ввода 
long WINAPI ZGetInputDiffADC(long typeDevice, long numberDSP, long numberChannel, long *enable);
// установить-сбросить заданный канал для ввода в дифференциальный режим
long WINAPI ZSetInputDiffADC(long typeDevice, long numberDSP, long numberChannel, long enable);
// ------------- Функции для работы только с ЦАП -------------
// установить внешнюю (из памяти ПК) или внутреннюю (только из памяти DSP) загрузку в ЦАП
long WINAPI ZSetExtCycleDAC(long typeDevice, long numberDSP, long enable);
// прочитать коф. затухания аттенюатора
long WINAPI ZGetAttenDAC(long typeDevice, long numberDSP, long numberChannel, double *reduction);
// установить коф. затухания аттенюатора
long WINAPI ZSetAttenDAC(long typeDevice, long numberDSP, long numberChannel, double reductionIn, double *reductionOut);
// опрос максимального размера буфера ЦАП в DSP
long WINAPI ZGetMaxSizeBufferDSPDAC(long typeDevice, long numberDSP, long *size);
// опрос размера буфера ЦАП в DSP
long WINAPI ZGetSizeBufferDSPDAC(long typeDevice, long numberDSP, long *size);
// установить размер буфера ЦАП в DSP
long WINAPI ZSetSizeBufferDSPDAC(long typeDevice, long numberDSP, long size);