ZETLAB/ZetHeaders/Zadc.bas


' определить установленный размер буфера при прерывании
Public Declare Function ZGetInterruptADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef size As Long) As Long
Public Declare Function ZGetInterruptDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef size As Long) As Long
' определить макс. возможный размер буфера при прерывании
Public Declare Function ZGetMaxInterruptADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef size As Long) As Long
Public Declare Function ZGetMaxInterruptDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef size As Long) As Long
' установить размер буфера для перекачки при прерывании
Public Declare Function ZSetInterruptADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal size As Long) As Long
Public Declare Function ZSetInterruptDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal size As Long) As Long

' определить установленный размер пакета данных DSP
Public Declare Function ZGetSizePacketADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef size As Long) As Long
Public Declare Function ZGetSizePacketDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef size As Long) As Long
' определить макс. возможный размер пакета данных DSP
Public Declare Function ZGetMaxSizePacketADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef size As Long) As Long
Public Declare Function ZGetMaxSizePacketDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef size As Long) As Long
' установить размер пакета данных DSP
Public Declare Function ZSetSizePacketADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal size As Long) As Long
Public Declare Function ZSetSizePacketDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal size As Long) As Long

' определить установленное кол-во пакетов за одно прерывание
Public Declare Function ZGetQuantityPacketsADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef size As Long) As Long
Public Declare Function ZGetQuantityPacketsDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef size As Long) As Long
' определить макс. возможное кол-во пакетов за одно прерывание
Public Declare Function ZGetMaxQuantityPacketsADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef size As Long) As Long
Public Declare Function ZGetMaxQuantityPacketsDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef size As Long) As Long
' установить кол-во пакетов за одно прерывание
Public Declare Function ZSetQuantityPacketsADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal size As Long) As Long
Public Declare Function ZSetQuantityPacketsDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal size As Long) As Long

' установить однократное или циклическое накопление в буфер ОЗУ ПК
Public Declare Function ZSetCycleSampleADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal enable As Long) As Long
Public Declare Function ZSetCycleSampleDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal enable As Long) As Long

' задать размер буфера АЦП в ОЗУ ПК
Public Declare Function ZSetBufferSizeADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal size As Long) As Long
Public Declare Function ZSetBufferSizeDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal size As Long) As Long
' запросить буфер в ОЗУ ПК
Public Declare Function ZGetBufferADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, buffer As Any, ByRef size As Long) As Long
Public Declare Function ZGetBufferDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, buffer As Any, ByRef size As Long) As Long
' освободить буфер в ОЗУ ПК
Public Declare Function ZRemBufferADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, buffer As Any) As Long
Public Declare Function ZRemBufferDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, buffer As Any) As Long
' чтение указателя буфера в ОЗУ ПК
Public Declare Function ZGetPointerADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef pointer As Long) As Long
Public Declare Function ZGetPointerDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef pointer As Long) As Long

' опрос количества включенных каналов
Public Declare Function ZGetNumberInputADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef workChannel As Long) As Long
Public Declare Function ZGetNumberOutputDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef workChannel As Long) As Long
' опрос включен ли заданный канал
Public Declare Function ZGetInputADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberChannel As Long, ByRef enable As Long) As Long
Public Declare Function ZGetOutputDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberChannel As Long, ByRef enable As Long) As Long
' включить/выключить заданный канал
Public Declare Function ZSetInputADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberChannel As Long, ByVal enable As Long) As Long
Public Declare Function ZSetOutputDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberChannel As Long, ByVal enable As Long) As Long

' ------------- Функции для работы только с АЦП -------------
' получить оставшиеся данные АЦП
Public Declare Function ZGetLastDataADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberChannel As Long, ByRef buffer As Any, ByVal size As Long) As Long

' прочитать режим работы устройства
Public Declare Function ZGetModaADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef moda As Long) As Long
' установить режим работы устройства (служебн., пользоваться не рекомендуется)
Public Declare Function ZSetModaADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal moda As Long) As Long

' прочитать коэф. усиления
Public Declare Function ZGetAmplifyADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberChannel As Long, ByRef amplify As Double) As Long
' прочитать коэф. усиления из списка возможных коэф. усиления
Public Declare Function ZGetListAmplifyADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal nextAmpl As Long, ByRef amplify As Double) As Long
' установить следующий коэф. усиления
Public Declare Function ZSetNextAmplifyADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberChannel As Long, ByVal nextAmpl As Long, ByRef amplify As Double) As Long
' установить коэф. усиления
Public Declare Function ZSetAmplifyADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberChannel As Long, ByVal amplifyIn As Double, ByRef amplifyOut As Double) As Long

' прочитать коэф. усиления ПУ8/10
Public Declare Function ZGetPreAmplifyADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberChannel As Long, ByRef amplify As Double) As Long
' прочитать коэф. усиления из списка возможных коэф. усиления ПУ8/10
Public Declare Function ZGetListPreAmplifyADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal nextPreAmpl As Long, ByRef amplify As Double) As Long
' установить следующий коэф. усиления ПУ8/10
Public Declare Function ZSetNextPreAmplifyADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberChannel As Long, ByVal nextAmpl As Long, ByRef amplify As Double) As Long
' установить коэф. усиления ПУ8/10
Public Declare Function ZSetPreAmplifyADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberChannel As Long, ByVal amplifyIn As Double, ByRef amplifyOut As Double) As Long

' проверить поддерживается и подключен ли модуль HCP
Public Declare Function ZFindHCPADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef present As Long) As Long
' прочитать о состоянии заданного канала модуля HCP
Public Declare Function ZGetHCPADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberChannel As Long, ByRef enable As Long) As Long
' установить состояние заданного канала модуля HCP
Public Declare Function ZSetHCPADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberChannel As Long, ByVal enable As Long) As Long

' опрос дифференциального режима заданного канала для ввода
Public Declare Function ZGetInputDiffADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberChannel As Long, ByRef enable As Long) As Long
' установить-сбросить заданный канал для ввода в дифференциальный режим
Public Declare Function ZSetInputDiffADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberChannel As Long, ByVal enable As Long) As Long

' ------------- Функции для работы только с ЦАП -------------
' установить внешнюю (из памяти ПК) или внутреннюю (только из памяти DSP) загрузку в ЦАП
Public Declare Function ZSetExtCycleDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal enable As Long) As Long

' прочитать коф. затухания аттенюатора
Public Declare Function ZGetAttenDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberChannel As Long, ByRef reduction As Double) As Long
' установить коф. затухания аттенюатора
Public Declare Function ZSetAttenDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberChannel As Long, ByVal reductionIn As Double, ByRef reductionOut As Double) As Long

' опрос максимального размера буфера ЦАП в DSP
Public Declare Function ZGetMaxSizeBufferDSPDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef size As Long) As Long
'long WINAPI ZGetSizeBufferDSPDAC(long numberDSP, long *size);
' установить размер буфера ЦАП в DSP
Public Declare Function ZGetSizeBufferDSPDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef size As Long) As Long
' установить коф. затухания аттенюатора
Public Declare Function ZSetSizeBufferDSPDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal size As Long) As Long


' Функция изменения длины строки до завершающего нуля (формат C-строк)
Public Function Trim0(sName As String) As String
   ' Right trim string at first null.
   Dim x As Integer
   x = InStr(sName, vbNullChar)
   If x > 0 Then Trim0 = Left$(sName, x - 1) Else Trim0 = sName
End Function


